# console-checkers

./: CMakeLists.txt
Enemy/: CMakeLists.txt
Enemy/include/: Enemy.h
Enemy/src/: Enemy.cpp  main.cpp
include/: board.h  coordination.h  enemyAPI.h  game.h
src/: board.cpp  coordination.cpp  enemyAPI.cpp  game.cpp  main.cpp
